# barbell

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  filter.txt  release.toml  results.txt  to_test
.cargo/: config.toml
.github/workflows/: release.yaml  release.yml  rust.yaml  setup-portable-config  test.yaml
benchmarks/: Cargo.toml  emperical_edit.ipynb  profile.sh
benchmarks/data/: README.md  debug.fasta  dual_filter.txt  flexiplex_barcodes.flex  gen_queries.py  native_bars.txt  native_queries.fasta  rapid_bars.txt  rapid_filter.txt  rapid_queries.fasta
benchmarks/src/: lib.rs  main.rs  profile_demux.rs
benchmarks/src/compare/: cli.rs  compare.rs  mod.rs
benchmarks/src/simulations/: cli.rs  mod.rs  mutate.rs  sim_data.rs
data/: supported_kits.txt
examples/: README.md  ald_left.fasta  ald_right.fasta  debug.fasta  dual_filters.txt  dual_native_filter.txt  group_filter.txt  native_barcodes.fasta  native_bars.fasta  native_left.fasta  native_right.fasta  rapid_barcodes.fasta  rapid_bars.fasta  rapid_filters.txt  rapid_short_barcodes.txt
examples/test/: left.fasta  right.fasta
output_dir/: GroupIII_truth.txt  GroupII_truth.txt  GroupIV_truth.txt  GroupV_truth.txt
src/: config.rs  lib.rs  main.rs  progress.rs  types.rs
src/annotate/: annotator.rs  barcodes.rs  cigar_parse.rs  cli.rs  distribution.rs  edit_model.rs  flank.rs  interval.rs  merge_sort.rs  mod.rs  model.rs  mutations.rs  progress.rs  search.rs  search_strategies.rs  searcher.rs  simd.rs  tune.rs
src/barbell/: annotate_strategy.rs  annotater.rs  demux.rs  filter.rs  inspect.rs  merge_sort.rs  misc.rs  mod.rs  pattern_assign.rs  plot.rs  reader.rs  seq.rs  strategy.rs  trim.rs
src/filter/: filter.rs  filter_strategy.rs  mod.rs  pattern.rs
src/inspect/: inspect.rs  mod.rs
src/io/: io.rs
src/kits/: kits.rs  mod.rs  use_kit.rs
src/parallel/: mod.rs  processor.rs
src/pattern/: pattern.rs
src/preset/: mod.rs  native_barcodes.rs  presets.rs  rapid_barcodes.rs
src/progress/: progress.rs
src/read/: reader.rs
src/search/: barcodes.rs  distribution.rs  interval.rs  mod.rs  searcher.rs  tune.rs
src/simdedits/: simd.rs
src/sra/: mod.rs  sra_download.rs
src/trim/: mod.rs  trim.rs
src/tune/: tune.rs
src/utils/: pull.rs
