[package]
name = "barbell-sassy-rewrite"
version = "0.1.7"
edition = "2024"

repository = "https://github.com/rickbeeloo/barbell-sg"

[lib]
name = "barbell"
path = "src/lib.rs"

[[bin]]
name = "barbell"
path = "bin/main.rs"

[dependencies]
sassy = { git = "https://github.com/RagnarGrootKoerkamp/sassy.git", branch = "master" }
pa-types = "1.0.0"
seq_io = "0.3.4"
rand = "0.8"
spinners = "4.1.1"
indicatif = "0.17.11"
needletail = "0.6.3"
colored = "2.0.0"
rayon = "1.10.0"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
tempfile = "3.2"
serde_json = "1.0"
once_cell = "1.19.0"
thread-id = "5.0.0"
plotpy = "1.13.0"
itertools = "*"

# Enable native CPU optimizations for release builds
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[package.metadata.dist]
allow-dirty = ["ci", "msi"]

[workspace]
members = [
    ".",
    "benchmarks"
]