[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
barbell-sassy-rewrite = { path = ".." }
clap = { version = "4.5.40", features = ["derive"] } 
rand = "0.9.1"
needletail = "0.6.3"
glob = "0.3.2"
sassy = { git = "https://github.com/RagnarGrootKoerkamp/sassy.git", branch = "master" }
once_cell = "1.19.0"
