[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
barbell = { path = ".." }
clap = { version = "4.5.40", features = ["derive"] } 
rand = "0.9.1"
needletail = "0.6.3"
glob = "0.3.2"
sassy ="0.1.4"
once_cell = "1.19.0"
noodles-bam = "0.88.0"
noodles-sam = "0.84.0"
noodles-bgzf = "0.46.0"
